// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPickerButton Closed smoke-test 1`] = `
<div>
  <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge stable-makeStyles-iconButton-1 css-154kngp-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
          data-testid="icon-button"
  >
    <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1mo2r65-MuiAvatar-root">
      <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1yqfavt-MuiAvatar-root">
        Beta
      </div>
    </div>
  </button>
</div>
`;

exports[`ColorPickerButton Open smoke-test 1`] = `
<div>
  <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge stable-makeStyles-iconButton-2 css-154kngp-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
          data-testid="icon-button"
  >
    <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1mo2r65-MuiAvatar-root">
      <div class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1yqfavt-MuiAvatar-root">
        Beta
      </div>
    </div>
  </button>
</div>
`;
